added viewing torrents from torcache

--- a/app/index.html
+++ b/app/index.html
@@ -14,8 +14,8 @@
     <!-- endbuild -->
     
     <!-- build:css styles/main.css -->
-    <link rel="stylesheet" href="styles/main.css" />
-    <link rel="stylesheet" href="styles/prism.css" />
+    <link rel="stylesheet" href="/styles/main.css" />
+    <link rel="stylesheet" href="/styles/prism.css" />
     <!-- endbuild -->
     
     <title>Torrent Editor</title>
