added `fork me` button

--- a/app/index.html
+++ b/app/index.html
@@ -31,6 +31,12 @@
       </div>
     </main>
     
+    <!-- GitHub ForkMe https://codepo8.github.io/css-fork-on-github-ribbon/ -->
+    <span id="forkongithub">
+      <a href="https://github.com/ReklatsMasters/torrent-editor">Fork me on GitHub</a>
+    </span>
+    <!-- /GitHub ForkMe -->
+    
     <script>
       __REACT_DEVTOOLS_GLOBAL_HOOK__ = parent.__REACT_DEVTOOLS_GLOBAL_HOOK__
     </script>
