added yandex metrika

--- a/app/index.html
+++ b/app/index.html
@@ -40,6 +40,9 @@
     </script>
     <!-- endbuild -->
     
+    <!-- inject:analytics -->
+    <!-- endinject -->
+    
     <!-- build:js /s/main.js -->
     <script src="/scripts/prism.min.js" data-manual></script>
     <script src="/assets/main.js"></script>
