added meta tags: desc, verification and notranslate

--- a/app/index.html
+++ b/app/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="google" content="notranslate">
+    <meta name='description' content='Super fast torrent viewer, editor and creator. Based on HTML5, Drag-and-Drop, React/Flux.'>
+    <meta name="google-site-verification" content="mrK2zEKnxMhWSXcf7FnIUKEoLrMxkEQ03MWZZnAapAE">
     
     <link href='https://fonts.googleapis.com/css?family=Anonymous+Pro' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Comfortaa:300' rel='stylesheet' type='text/css'>
